[package]
name = "snapshot-browser-api"
version = "0.1.5"
edition = "2024"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
description = "An API for browsing snapshots"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
log = "0.4"
env_logger = "0.11.8"
chrono = "0.4.41"
image = { version = "0.25.6", default-features = false, features = [
  "gif",
  "hdr",
  "jpeg",
  "png",
  "tiff",
  "webp",
] }
